[OTK] Frontend: projectCard wrapping fix

--- a/FractalTree.Frontend/src/CSS/ProjectsPage.css
+++ b/FractalTree.Frontend/src/CSS/ProjectsPage.css
@@ -54,8 +54,9 @@
     cursor: pointer;
 }
 
-.projectCard h2 {
+.projectCard h2, .projectCard p {
     width: calc(100% - 7.5rem);
+    word-wrap: break-word;
 }
 
 .projectCard .projectIcon {
